# SDLC-Framework

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  e2e.yml  release.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: .extract_review.py  .review-auditor-1-10.md  .review-auditor-1-10.txt  .review-auditor-1-11.md  .review-blind-1-10.md  .review-blind-1-10.txt  .review-blind-1-11.md  .review-diff-1-10.patch  .review-diff-1-11.patch  .review-diff-1-14.patch  .review-diff-1-16.patch  .review-diff-1-8.patch  .review-edge-1-10.md  .review-edge-1-10.txt  .review-edge-1-11.md  1-1-project-bootstrap-with-uv-init-hatchling.md  1-10-atomic-write-protocol-chaos-tests.md  1-11-append-only-journal-property-test.md  1-12-state-projection-from-journal-replay-property-test.md  1-13-airuntime-abc-mock-airuntime.md  1-14-behavioral-conformance-abstraction-adequacy-ci-test.md  1-15-engine-scanner-skeleton.md  1-16-cli-sdlc-init-greenfield.md  1-17-cli-sdlc-scan-status-accessibility-flags.md  1-18-1-cli-trace-replay-logs-quality-hardening.md  1-18-cli-sdlc-trace-replay-logs.md  1-19-migration-framework-major-version-refusal.md  1-2-pyproject-toml-quality-gates-configuration.md  1-20-recovery-sdlc-rebuild-state.md  1-21-gate-wire-format-v1-lock-ceremony.md  1-3-github-actions-cicd-pipelines.md  1-4-pre-commit-config-module-boundary-enforcement-hook.md  1-4-review-diff.txt  1-5-mkdocs-adr-log-skeleton.md  1-6-foundation-errors-and-ids-modules.md  1-7-foundation-five-wire-format-pydantic-contracts.md  1-8-foundation-config-module.md  1-9-foundation-concurrency-module.md  2a-0-e2e-test-harness-tier-1-cli-tier-2-pipeline.md  2a-1-workflow-yaml-loader-schema-validation.md  (+83 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-05-07-old.md  implementation-readiness-report-2026-05-07.md  prd.md  ux-design-specification.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/custom/: bmad-code-review.toml  bmad-dev-story.toml
_bmad/scripts/: resolve_config.py  resolve_customization.py
_bmad/tea/: config.yaml
docs/: architecture-overview.md  boundary-postcondition-audit.md  index.md  specialists-matrix.md  threat-model.md
docs/CODEMAPS/: cli-module.md  engine-module.md  integration-tests.md  journal.md  runtime.md  state.md
docs/a11y/: README.md  release-template.md
docs/api/: dora-schema.json
docs/decisions/: ADR-001-pyproject-metadata.md  ADR-002-ruff-config.md  ADR-003-mypy-strict.md  ADR-004-pytest-config.md  ADR-005-package-data-layout.md  ADR-006-ci-yml.md  ADR-007-e2e-yml.md  ADR-008-release-yml.md  ADR-009-docs-yml.md  ADR-010-pre-commit-config.md  ADR-011-mkdocs-setup.md  ADR-012-module-layout.md  ADR-013-atomic-state-write-protocol.md  ADR-014-append-only-journal-protocol.md  ADR-015-state-projection-from-journal.md  ADR-016-airuntime-abc-and-mock-implementation.md  ADR-017-abstraction-adequacy-ci-contract.md  ADR-018-engine-scanner-skeleton.md  ADR-019-cli-skeleton-typer-adoption.md  ADR-020-cli-scan-status-accessibility-flags.md  ADR-021-cli-trace-replay-logs.md  ADR-022-migration-framework-and-schema-gate.md  ADR-023-rebuild-state-and-recovery-prompt.md  ADR-024-wire-format-v1-lock.md  ADR-025-pydantic-strict-mode-default.md  ADR-026-tdd-first-chunked-review-workflow.md  ADR-027-e2e-test-framework-strategy.md  ADR-028-journal-kind-taxonomy.md  ADR-029-mock-runtime-envelope-semantics.md  ADR-030-specialist-roster-freeze.md  ADR-031-atomic-write-primitive.md  ADR-032-append-with-seq-alloc.md  ADR-033-debt-decay-gate-a-zero-open.md  ADR-034-debt-d7-split-signoff-flock.md  ADR-035-debt-decay-gate-c-severity-scoped.md  ADR-036-adopt-mutation-testing-harness.md  ADR-037-repo-containment-guard-clarification-signoff.md  ADR-038-sticky-halt-projection.md  adr-template.md  index.md
docs/runbooks/: diagnose-dispatch-failure.md  diagnose-hook-rejection.md  diagnose-signoff-drift.md  handle-hash-drift.md
docs/sprints/: epic-2a-dag.md  epic-2b-dag.md  epic-3-dag.md  epic-4-dag.md  epic-5-dag.md
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_detect_raw.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: _journal_mutation_detectors.py  check_boundary_line_presence.py  check_dashboard_color_only.py  check_dashboard_forbidden_patterns.py  check_dashboard_motion.py  check_dashboard_no_data_theme.py  check_dashboard_no_external_fonts.py  check_dashboard_no_framework.py  check_debt_decay_budget.py  check_fresh_context_review_tag.py  check_migration_registry.py  check_module_boundaries.py  check_no_direct_state_writes.py  check_no_hardcoded_secrets.py  check_no_journal_mutation.py  check_no_outbound_http.py  check_posix_suite_ran.py  check_runtime_import_via_abc.py  check_story_merged_before_done.py  check_strict_model_inheritance.py  check_subprocess_allowlist.py  freeze_wireformat_snapshots.py  generate_a11y_report.py  module_boundary_table.py  run_adopt_mutation.py  validate_specialists.py
src/sdlc/: __init__.py
tests/: _auto_loop_helpers.py  _auto_mad_helpers.py  _clihelper.py  conftest.py  test_check_module_boundaries.py  test_module_boundaries_main.py  test_smoke.py
tests/adopt/: __init__.py  _source_untouched_helpers.py
tests/benchmark/: README.md  conftest.py  test_auto_loop_perf.py  test_dora_perf.py  test_scan_perf.py
tests/chaos/: _kill_protocol.py  _os_crash.py  conftest.py  kill_points.py  test_atomic_write_kill_points.py
tests/contracts/: test_adopt_report_contract.py  (+1 more)
tests/fixtures/brownfield/python-pyproject/: pyproject.toml
tests/fixtures/brownfield/python-pyproject/docs/: requirements.md
tests/fixtures/brownfield/python-pyproject/goldens/: detection.json  detection_recent.json
(+1039 files in other folders)
