[project]
name = "sdlc-framework"
version = "0.0.0"
description = "Deterministic, auditable, multi-agent SDLC orchestration framework on top of Claude Code."
readme = "README.md"
license = { text = "TBD" }
authors = [
    { name = "Vuonglq01685" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",   # cap: pydantic 2→3 will introduce schema breaks (v3 is on the roadmap)
    "pyyaml>=6,<7",     # cap: pyyaml 6→7 has not been released; defensive guard against future major
]

# [project.scripts]
# sdlc = "sdlc.cli.main:app"
# TODO: Wire CLI entry point in Story 1.16. Entry point omitted to avoid shipping a broken script.

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0,<3",          # cap: mypy 1→2 introduced inference breaks; lock guards 2.x
    "pytest>=8.0.0,<10",        # cap: pytest 8→9 has --strict-config / filterwarnings shifts
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.0",
    "pre-commit>=4.0.0,<5",
    "mkdocs>=1.6.0,<2",
    "hypothesis>=6.100,<7",
    "types-PyYAML",             # mypy stubs for pyyaml (dev-only; not shipped at runtime)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlc"]
# TODO: ADR-005 — package_data extension lands in Story 1.16+
# Future additions: agents/, commands/, skills/, dashboard/static/, workflows/, memory/, claude_hooks/

[tool.hatch.build.targets.sdist]
# PRD §499 + §216 mandate wheel-only distribution for v1.
# `exclude = ["**"]` produces a near-empty sdist containing only the 4 files hatch
# auto-includes (PKG-INFO, pyproject.toml, .gitignore, README.md ~ 2.9 KB total) — not
# a fully-suppressed target. Hatch has no clean "skip-sdist" toggle when the wheel
# target is also defined. The absolute wheel-only guarantee in CI is enforced by
# `uv build --wheel` in .github/workflows/release.yml plus the AC3 grep assertion
# verifying no `*.tar.gz` ships in the published artifact set.
exclude = ["**"]

# =============================================================================
# Ruff — lint + format (ADR-002)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]
extend-exclude = ["docs/ux/", ".claude/", "_bmad/", "_bmad-output/", "_site/"]  # `docs/ux/` matches mkdocs.yml `exclude_docs: ux/` scope (ADR-011)

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort (required-imports lives here)
    "B",     # flake8-bugbear
    "C90",   # mccabe (complexity)
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "PL",    # pylint (PLR0915 = too-many-statements)
    "RUF",   # ruff-specific rules
]
ignore = [
    "PLR0913",  # too-many-arguments — engine signatures often legitimately wide
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-statements = 50

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",  # magic numbers in tests are fine
    "PLC0415",  # deferred imports inside functions needed for POSIX-only modules skipped on Windows
    "PLW1510",  # subprocess.run check=False is intentional in test helpers
]
"src/sdlc/config/secrets.py" = [
    "C901",     # _sanitize_value complexity — pre-existing (Story 1.8); acceptable for recursive sanitizer
    "PLR0911",  # too many returns — pre-existing (Story 1.8); acceptable for recursive sanitizer
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# Mypy — strict type checking (ADR-003)
# =============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
pretty = true
warn_unused_configs = true
warn_unreachable = true
extra_checks = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

# sdlc.concurrency and sdlc.state.atomic are POSIX-only. sys.platform guards
# make code after the ImportError raise (locks.py, atomic.py) and inside
# "if sys.platform != 'win32':" blocks (__init__.py) appear "unreachable" when
# mypy runs on Windows. warn_unreachable is disabled only for these files;
# all strict checks hold.
[[tool.mypy.overrides]]
module = [
    "sdlc.concurrency",
    "sdlc.concurrency.locks",
    "sdlc.state",
]
warn_unreachable = false

# sdlc.state.atomic is POSIX-only and raises ImportError on Windows; mypy on
# Windows still parses the module body and flags POSIX-only attributes from
# fcntl as missing. Narrow the suppression to the specific error codes that
# fire from POSIX-only paths instead of disabling type-checking wholesale.
# All strict checks (disallow_untyped_defs, disallow_any_generics, etc.) still
# hold; only platform-conditional resolution is suppressed.
[[tool.mypy.overrides]]
module = "sdlc.state.atomic"
disable_error_code = ["unreachable", "attr-defined", "no-any-return"]

# sdlc.journal.writer is POSIX-only and raises ImportError on Windows; mypy on
# Windows still parses the module body and flags POSIX-only attributes from
# fcntl/os as missing. Narrow suppression mirrors sdlc.state.atomic pattern (ADR-014).
[[tool.mypy.overrides]]
module = "sdlc.journal.writer"
disable_error_code = ["unreachable", "attr-defined", "no-any-return"]

# sdlc.journal.__init__ uses conditional imports for the POSIX-only writer.
[[tool.mypy.overrides]]
module = "sdlc.journal"
warn_unreachable = false

# =============================================================================
# Pytest + Coverage (ADR-004)
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/sdlc",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=90",
]
xfail_strict = true
filterwarnings = ["error"]
markers = [
    "unit: fast, isolated unit tests",
    "integration: multi-module or boundary-crossing tests",
    "property: hypothesis-driven property and invariant tests",
    "chaos: POSIX-only kill-point chaos tests (Story 1.10)",
    "benchmark: performance and timing benchmarks (pytest-benchmark)",
    "e2e: full end-to-end scenarios spanning the CLI + filesystem",
]

[tool.coverage.run]
source = ["src/sdlc", "scripts"]
omit = [
    "scripts/validate_specialists.py",
    # POSIX-only; fcntl is not available on Windows. Correctness is verified by
    # the test suite on Linux CI (ubuntu-latest, Story 1.3). Coverage is not
    # measured here because the module cannot be imported on the Windows dev host.
    "src/sdlc/concurrency/locks.py",
    # POSIX-only; fcntl + parent-dir fsync require Linux/macOS. Chaos tests run
    # on ubuntu-latest CI. Not importable on the Windows dev host.
    "src/sdlc/state/atomic.py",
    # Platform-conditional import hub: the "if sys.platform != 'win32'" branch
    # is unreachable on Windows. Covered by Linux CI.
    "src/sdlc/state/__init__.py",
    # POSIX-only; O_APPEND + flock require Linux/macOS. Not importable on Windows.
    "src/sdlc/journal/writer.py",
    # Platform-conditional import hub for journal: mirrors state/__init__.py omit.
    "src/sdlc/journal/__init__.py",
]
branch = true
# parallel = true intentionally omitted: single-process pytest does not need it.
# Re-enable together with [tool.coverage.paths] + a `coverage combine` step when xdist lands.

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if sys\\.platform != \"win32\":",  # POSIX-only guard; covered on Linux CI (ubuntu-latest)
]
partial_branches = [
    "if TYPE_CHECKING:",   # exclude_also drops the line; this drops the branch arc too
    "if sys\\.platform",   # POSIX-only guards; covered on Linux CI
]
